Button Jump Fix

--- a/src/_input/button/styles.scss
+++ b/src/_input/button/styles.scss
@@ -21,6 +21,11 @@ button {
       transition: 0.3s ease;
       transform: translate(0, 0.0625rem);
     }
+
+    img {
+      width: 1.25rem;
+      height: 1.25rem;
+    }
   }
 
   &.primary {
